# AstroBox-NG-Module-Provider

./: Cargo.toml  README.md
src/: cdn.rs  community.rs  lib.rs  net.rs
src/community/: legacyparse.rs  models.rs  officialv2.rs
src/community/models/: common.rs  official.rs
