[package]
name = "provider"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
sysproxy = "0.3.0"
reqwest = { version = "0.12.24", features = ["stream", "json"] }
arc-swap = "1.7.1"
rand = "0.9.2"
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3.31"
tauri = { version = "2.9.2", features = [] }
csv = "1.4.0"
log = "0.4"
