[package]
name = "provider"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
netcfg = { path = "../netcfg" }
serde = "1.0.228"
serde_json = "1.0.149"
reqwest = { version = "0.13.3", default-features = false, features = ["stream", "json", "rustls"] }
arc-swap = "1.9.1"
rand = "0.10.1"
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3.32"
tauri = { version = "2.11.0", features = ["rustls-tls"] }
csv = "1.4.0"
log = "0.4"
regex = "1"
